Fixed overflow bug on main content container

--- a/sites/all/themes/urbanmediaspace_mothership/styles/urbanmediaspace.css
+++ b/sites/all/themes/urbanmediaspace_mothership/styles/urbanmediaspace.css
@@ -877,6 +877,7 @@ body.context-editing div.draggable:hover a.context-block-handle {
   min-height: 500px;
   padding: 10px;
   width: 940px;
+  overflow: hidden;
 }
 
 /*
